[package]
name = "generic_filesystem_cache"
version = "0.1.0"
authors = ["_ <_>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
bincode = "1.3"
rayon = "1.5"
thiserror = "1.0"
walkdir = "2"
simplelog = "0.9"
log = "0.4"
itertools = "0.10"